--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="container">
               <div class="row"> 
                 <div class="col-md-10">
-                  <h1 class="banner-title">LETS WORK ON SOMETHING INTERESTING TODAY</h1>
+                  <h1 class="banner-title">Work Hard! Create A New Virtual World...</h1>
                   <p class="banner-subtitle">Frontend Developer based in Bangladesh</p>
                   <a class="btn btn-default banner-btn scroll" href="#about"> Know more <i class="fa fa-angle-double-right"></i></a>
                 </div>
@@ -131,7 +131,11 @@
               <div class="col-sm-6">
                 <div class="skill-info">
                   <h3 class="profile-title">My Skill</h3>
-                  <p>About My skills and past work experience Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum.</p>
+                  <p>London based frontend developer and designer aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. 
+
+Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. 
+
+Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper nisi. Nam eget dui. Etiam rhoncus.</p>
                 </div>
               </div>
               <div class="col-sm-6">
@@ -192,45 +196,45 @@
               <div class="col-xs-12 col-sm-6 col-md-4">
                 <div class="service-content">
                   <div class="service-icon">
-                    <i class="fa fa-magic"></i>
+                    <i class="fa fa-desktop"></i>
                   </div>
-                  <h4 class="service-title">BRANDING</h4>
+                  <h4 class="service-title">Web design</h4>
                   <p>Many desktop publishing packages and web page editors now use Lorem Ipsum text.</p>
                 </div>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-4">
                 <div class="service-content">
                   <div class="service-icon">
-                    <i class="fa fa-magic"></i>
+                    <i class="fa fa-code"></i>
                   </div>
-                  <h4 class="service-title">BRANDING</h4>
+                  <h4 class="service-title">Web Development</h4>
                   <p>Many desktop publishing packages and web page editors now use Lorem Ipsum text.</p>
                 </div>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-4">
                 <div class="service-content">
                   <div class="service-icon">
-                    <i class="fa fa-magic"></i>
+                    <i class="fa fa-wordpress"></i>
                   </div>
-                  <h4 class="service-title">BRANDING</h4>
+                  <h4 class="service-title">Wordpress</h4>
                   <p>Many desktop publishing packages and web page editors now use Lorem Ipsum text.</p>
                 </div>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-4">
                 <div class="service-content">
                   <div class="service-icon">
-                    <i class="fa fa-magic"></i>
+                    <i class="fa fa-cloud"></i>
                   </div>
-                  <h4 class="service-title">BRANDING</h4>
+                  <h4 class="service-title">Web hosting</h4>
                   <p>Many desktop publishing packages and web page editors now use Lorem Ipsum text.</p>
                 </div>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-4">
                 <div class="service-content">
                   <div class="service-icon">
-                    <i class="fa fa-magic"></i>
+                    <i class="fa fa-paper-plane-o "></i>
                   </div>
-                  <h4 class="service-title">BRANDING</h4>
+                  <h4 class="service-title">Email Templait</h4>
                   <p>Many desktop publishing packages and web page editors now use Lorem Ipsum text.</p>
                 </div>
               </div>
@@ -252,37 +256,37 @@
             <div class="col-xs-12 col-sm-3">
               <div class="counter-wrap text-center">
                 <div class="counter-icon">
-                  <i class="fa fa-magic fa-2x"></i>
+                  <i class="fa fa-desktop fa-2x"></i>
                 </div>
-                <span class="counter">759</span>
-                <h4 class="counter-title">Logo Design</h4>
+                <span class="counter">429</span>
+                <h4 class="counter-title">Web design</h4>
               </div>
             </div>
             <div class="col-xs-12 col-sm-3">
               <div class="counter-wrap text-center">
                 <div class="counter-icon">
-                  <i class="fa fa-magic fa-2x"></i>
+                  <i class="fa fa-wordpress fa-2x"></i>
                 </div>
-                <span class="counter">759</span>
-                <h4 class="counter-title">Logo Design</h4>
+                <span class="counter">233</span>
+                <h4 class="counter-title">Wordpress</h4>
               </div>
             </div>
             <div class="col-xs-12 col-sm-3">
               <div class="counter-wrap text-center">
                 <div class="counter-icon">
-                  <i class="fa fa-magic fa-2x"></i>
+                  <i class="fa fa-paper-plane-o fa-2x"></i>
                 </div>
-                <span class="counter">759</span>
-                <h4 class="counter-title">Logo Design</h4>
+                <span class="counter">150</span>
+                <h4 class="counter-title">Email Template</h4>
               </div>
             </div>
             <div class="col-xs-12 col-sm-3">
               <div class="counter-wrap text-center">
                 <div class="counter-icon">
-                  <i class="fa fa-magic fa-2x"></i>
+                  <i class="fa fa-smile-o fa-2x"></i>
                 </div>
-                <span class="counter">759</span>
-                <h4 class="counter-title">Logo Design</h4>
+                <span class="counter">1258</span>
+                <h4 class="counter-title">Clients</h4>
               </div>
             </div>
           </div>
@@ -335,7 +339,7 @@
                       </div>
                       <div class="portfolio-info text-center">
                         <h4 class="portfolio-title">Project name </h4>
-                        <p class="portfolio-category">Website</p>
+                        <p class="portfolio-category">Illustration</p>
                       </div>
                     </div>
                   </li>
@@ -363,7 +367,7 @@
                       </div>
                       <div class="portfolio-info text-center">
                         <h4 class="portfolio-title">Project name </h4>
-                        <p class="portfolio-category">Website</p>
+                        <p class="portfolio-category">Branding</p>
                       </div>
                     </div>
                   </li>
@@ -377,7 +381,7 @@
                       </div>
                       <div class="portfolio-info text-center">
                         <h4 class="portfolio-title">Project name </h4>
-                        <p class="portfolio-category">Website</p>
+                        <p class="portfolio-category">Illustration</p>
                       </div>
                     </div>
                   </li>
