--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 
   <head>
     <meta charset="utf-8">
@@ -34,7 +34,7 @@
 
   </head>
 
-  <body body="smooth-scroller">
+  <body >
     <!--[if lt IE 8]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -54,7 +54,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Portfolio</a>
+              <a class="navbar-brand" href="#"><img src="images/logo.png" alt="logo"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -102,7 +102,7 @@
 
             <div class="profile-area">
               <div class="col-sm-5">
-                <img class="profile-image img-responsive" src="images/personal.jpg"/>
+                <img class="profile-image img-responsive" src="images/profile/personal.jpg" alt="profile"/>
               </div>
               <div class="col-sm-7">
                 <div class="profile-info">
@@ -421,31 +421,31 @@ Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper nisi. Na
             <div class="col-md-12">
               <div id="testimonial-slider">
                 <div class="item">
-                  <img class="img-responsive" src="images/profile.png" alt="Owl Image">
+                  <img class="img-responsive" src="images/profile/profile.png" alt="Owl Image">
                   <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lobortis odio ac eros sollicitudin consequat. Proin a tortor tortor. Nullam consequat dictum metus in vulputate. Pellentesque congue lectus justo, et.”</p>\
                   <h4 class="client-name"> Loren Ipsum</h4>
                   <span>Developer</span>
                 </div>
                 <div class="item">
-                  <img class="img-responsive" src="images/profile.png" alt="Owl Image">
+                  <img class="img-responsive" src="images/profile/profile.png" alt="Owl Image">
                   <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lobortis odio ac eros sollicitudin consequat. Proin a tortor tortor. Nullam consequat dictum metus in vulputate. Pellentesque congue lectus justo, et.”</p>\
                   <h4 class="client-name"> Loren Ipsum</h4>
                   <span>Developer</span>
                 </div>
                 <div class="item">
-                  <img class="img-responsive" src="images/profile.png" alt="Owl Image">
+                  <img class="img-responsive" src="images/profile/profile.png" alt="Owl Image">
                   <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lobortis odio ac eros sollicitudin consequat. Proin a tortor tortor. Nullam consequat dictum metus in vulputate. Pellentesque congue lectus justo, et.”</p>\
                   <h4 class="client-name"> Loren Ipsum</h4>
                   <span>Developer</span>
                 </div>
                 <div class="item">
-                  <img class="img-responsive" src="images/profile.png" alt="Owl Image">
+                  <img class="img-responsive" src="images/profile/profile.png" alt="Owl Image">
                   <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lobortis odio ac eros sollicitudin consequat. Proin a tortor tortor. Nullam consequat dictum metus in vulputate. Pellentesque congue lectus justo, et.”</p>\
                   <h4 class="client-name"> Loren Ipsum</h4>
                   <span>Developer</span>
                 </div>
                 <div class="item">
-                  <img class="img-responsive" src="images/profile.png" alt="Owl Image">
+                  <img class="img-responsive" src="images/profile/profile.png" alt="Owl Image">
                   <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lobortis odio ac eros sollicitudin consequat. Proin a tortor tortor. Nullam consequat dictum metus in vulputate. Pellentesque congue lectus justo, et.”</p>\
                   <h4 class="client-name"> Loren Ipsum</h4>
                   <span>Developer</span>
@@ -500,7 +500,7 @@ Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper nisi. Na
                   <div class="form-group">
                     <textarea class="form-control" rows="5" placeholder="Enter Message"></textarea>
                   </div>
-                  <a type="submit" class="btn btn-default">Send Message</a>
+                  <a href="#" class="btn btn-default">Send Message</a>
                 </form>
               </div>
             </div>
