--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <!-- Place favicon.ico in the root directory -->
     
     <!-- PLUGINS CSS STYLE -->
@@ -77,9 +78,9 @@
           <div class="banner-content">
             <div class="container">
               <div class="row"> 
-                <div class="col-md-10">
-                  <h1 class="banner-title">Work Hard! Create A New Virtual World...</h1>
-                  <p class="banner-subtitle">Frontend Developer based in Bangladesh</p>
+                <div class="col-md-12">
+                  <h1 class="banner-title">Lorem ipsum dolor sit amet, consectetur </h1>
+                  <p class="banner-subtitle">Lorem ipsum dolor sit amet, consectetur </p>
                   <a class="btn btn-default banner-btn scroll" href="#about"> Know more <i class="fa fa-angle-double-right"></i></a>
                 </div>
               </div>
@@ -108,11 +109,12 @@
                 <div class="profile-info">
                   <h3 class="profile-title">Profile</h3>
                   <h4 class="profile-subtitle">Frontend Web Developer</h4>
-                  <p>London based frontend developer and designer aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. 
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid alias nemo voluptatibus adipisci quasi reprehenderit odit quibusdam et. Aspernatur omnis, commodi libero tempora aliquam nostrum natus autem, iusto nihil aut!
                       <br><br>
-                    Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. 
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi officiis nemo doloremque expedita beatae deserunt rem natus sunt quasi! Sapiente rerum cumque veniam similique sequi voluptatibus odio nam maxime magnam?
                     <br><br>
-                    Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper nisi. Nam eget dui. Etiam rhoncus.</p>
+                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt tenetur cupiditate voluptate iusto, porro vel dignissimos a blanditiis asperiores accusantium, officia sint natus laborum delectus! Omnis ab quas vel quam.
+                  </p>
                   <div class="social-icons">
                     <ul class="social-icon-list list-inline list-unstyled">
                       <li><a href="#" target="_blank" class="facebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
@@ -131,11 +133,10 @@
               <div class="col-sm-6">
                 <div class="skill-info">
                   <h3 class="profile-title">My Skill</h3>
-                  <p>London based frontend developer and designer aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. 
-
-Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. 
-
-Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper nisi. Nam eget dui. Etiam rhoncus.</p>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius vitae eveniet, officiis accusantium quas exercitationem obcaecati recusandae qui aperiam? Quis asperiores eum fugit aliquid sed. Dolorem dolorum ut, minus nobis.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas inventore quod aut itaque magni non quidem dolorum ut molestiae sit quibusdam maiores nemo debitis, dolor nulla voluptates, quia repudiandae quae.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, dolore iusto debitis molestiae voluptates non eum at, magni vitae rem quas, incidunt deleniti dolor delectus officia sunt nulla illum, cupiditate.
+                  </p>
                 </div>
               </div>
               <div class="col-sm-6">
@@ -179,7 +180,7 @@ Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper nisi. Na
             <div class="col-md-12">
               <div class="section-header">
                 <h2 class="section-title">What I Do</h2>
-                <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Eius vitae eveniet,</p>
               </div>
             </div>
 
@@ -190,7 +191,7 @@ Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper nisi. Na
                     <i class="fa fa-magic"></i>
                   </div>
                   <h4 class="service-title">BRANDING</h4>
-                  <p>Many desktop publishing packages and web page editors now use Lorem Ipsum text.</p>
+                  <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Eius vitae eveniet,</p>
                 </div>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-4">
@@ -199,7 +200,7 @@ Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper nisi. Na
                     <i class="fa fa-desktop"></i>
                   </div>
                   <h4 class="service-title">Web design</h4>
-                  <p>Many desktop publishing packages and web page editors now use Lorem Ipsum text.</p>
+                  <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Eius vitae eveniet,</p>
                 </div>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-4">
@@ -208,7 +209,7 @@ Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper nisi. Na
                     <i class="fa fa-code"></i>
                   </div>
                   <h4 class="service-title">Web Development</h4>
-                  <p>Many desktop publishing packages and web page editors now use Lorem Ipsum text.</p>
+                  <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Eius vitae eveniet,</p>
                 </div>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-4">
@@ -217,7 +218,7 @@ Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper nisi. Na
                     <i class="fa fa-wordpress"></i>
                   </div>
                   <h4 class="service-title">Wordpress</h4>
-                  <p>Many desktop publishing packages and web page editors now use Lorem Ipsum text.</p>
+                  <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Eius vitae eveniet,</p>
                 </div>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-4">
@@ -226,7 +227,7 @@ Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper nisi. Na
                     <i class="fa fa-cloud"></i>
                   </div>
                   <h4 class="service-title">Web hosting</h4>
-                  <p>Many desktop publishing packages and web page editors now use Lorem Ipsum text.</p>
+                  <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Eius vitae eveniet,</p>
                 </div>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-4">
@@ -235,7 +236,7 @@ Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper nisi. Na
                     <i class="fa fa-paper-plane-o "></i>
                   </div>
                   <h4 class="service-title">Email Templait</h4>
-                  <p>Many desktop publishing packages and web page editors now use Lorem Ipsum text.</p>
+                  <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Eius vitae eveniet,</p>
                 </div>
               </div>
               <div class="clearfix"></div>
@@ -470,11 +471,11 @@ Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper nisi. Na
             <div class="col-sm-6">
               <div class="contact-container">
                 <h4 class="contact-title">Contact Address</h4>
-                <p>Why you should hire me writeup Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque nascetur ridiculus mus.</p>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque nascetur ridiculus mus.</p>
                 <div class="contact-info">
-                  <p><i class="fa fa-map-marker"></i> New Street 22545, Nexa Road, New York City, USA</p>
-                  <p><i class="fa fa-envelope"></i> hello@uigrid.com</p>
-                  <p><i class="fa fa-phone"></i> 001-000-000-000</p>
+                  <p><i class="fa fa-map-marker"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                  <p><i class="fa fa-envelope"></i> example@gmail.com</p>
+                  <p><i class="fa fa-phone"></i> 000-000-000-000</p>
                 </div>
                 <div class="social-icons">
                   <ul class="social-icon-list list-inline list-unstyled">
