--- a/index.html
+++ b/index.html
@@ -525,9 +525,9 @@
     </div><!-- End of Wrapper -->
 
     <!-- Starting of Script Links -->
-    <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-    <script>window.jQuery || document.write('<script src="plugins/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-    
+    <!-- <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+    <script>window.jQuery || document.write('<script src="plugins/vendor/jquery-1.12.0.min.js"><\/script>')</script> -->
+    <script src="plugins/jquery-1.12.2.min/jquery-1.12.0.min.js"></script>
     <script src="plugins/jquery-ui/jquery-ui.js"></script>
     <script src="plugins/bootstrap/js/bootstrap.min.js"></script>
     <script src="plugins/owl-carousel/owl.carousel.min.js"></script>
